<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data></data>
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:padding="30dp"
        tools:context=".activities.LoginActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/login"
                    android:src="@drawable/ic_password"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:textColor="@color/red_100"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="80sp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_student_id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:background="#00000000"
                    app:hintTextColor="@color/red_100"
                    android:textColorHint="@color/red_100"
                    app:boxStrokeColor="@color/red_100"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/red_100"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/red_200">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etIndexNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/red_100"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:background="#00000000"
                    app:hintTextColor="@color/red_100"
                    android:textColorHint="@color/red_100"
                    app:boxStrokeColor="@color/red_100"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="@color/red_100"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/red_200">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/red_100"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/red_50"
                    android:text="@string/login"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>