<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="studentModel"
            type="com.ucc.portal.uccapp.models.StudentViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:background="@drawable/bg"
            tools:context=".activities.DashboardActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginLeft="22dp">
                    <TextView
                        android:id="@+id/tvWelcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:text="Welcome Back"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvWelcome"
                        android:text="@{studentModel.firstName}"
                        android:textColor="#FDA6A6"
                        android:textSize="30sp" />
                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:src="@drawable/stud"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false"
                    android:rowCount="3"
                    android:columnCount="2">
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        tools:ignore="UnusedAttribute"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:id="@+id/btnProfile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/profile"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="Profile"
                                android:textSize="18sp"
                                android:textColor="#6f6f6f"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        tools:ignore="UnusedAttribute"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:id="@+id/btnAcademic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/academic"
                                android:contentDescription="@string/academic_desc" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/academic"
                                android:textSize="18sp"
                                android:textColor="#6f6f6f"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        tools:ignore="UnusedAttribute"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:id="@+id/btnFinance"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/economics"
                                android:contentDescription="@string/academic_desc" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/finance"
                                android:textSize="18sp"
                                android:textColor="#6f6f6f"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        tools:ignore="UnusedAttribute"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/informative"
                                android:contentDescription="@string/academic_desc" />
                            <TextView
                                android:id="@+id/btnServiceInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="Service Info"
                                android:textSize="18sp"
                                android:textColor="#6f6f6f"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        tools:ignore="UnusedAttribute"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:id="@+id/btnSurvey"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/survey"
                                android:contentDescription="@string/survey" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="Survey"
                                android:textSize="18sp"
                                android:textColor="#6f6f6f"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        tools:ignore="UnusedAttribute"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:id="@+id/btnFaq"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/question"
                                android:contentDescription="@string/faq" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="FAQ"
                                android:textSize="18sp"
                                android:textColor="#6f6f6f"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </GridLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

           <com.google.android.material.bottomnavigation.BottomNavigationView
               android:id="@+id/bottomNavigation"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:itemIconSize="30dp"
               app:labelVisibilityMode="labeled"
               android:layout_gravity="bottom"
               app:menu="@menu/menu"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
